force-app/main/default/objects/Project__c/fields/Admin_Category__c.field-meta.xml
<CustomField>
    <fullName>Admin_Category__c</fullName>
    <inlineHelpText>Indicates the category (essentially, the folder or tag) chosen for this project from the Project Control Center.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>