force-app/main/default/objects/Project__c/fields/All_Parent_Projects__c.field-meta.xml
<CustomField>
    <fullName>All_Parent_Projects__c</fullName>
    <formula>/* supports hierarchies of up to 5 levels; can be added onto if needed */

IF(
   ISBLANK(Parent_Project__c),
   &quot;This project has no parent projects.&quot;,
   IF(
      ISBLANK(Parent_Project__r.Parent_Project__c),
      Parent_Project__r.Name + &quot; &gt; &quot; + Name,
      IF(
         ISBLANK(Parent_Project__r.Parent_Project__r.Parent_Project__c),
         Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Name + &quot; &gt; &quot; + Name,
         IF(
            ISBLANK(Parent_Project__r.Parent_Project__r.Parent_Project__r.Parent_Project__c),
            Parent_Project__r.Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Name + &quot; &gt; &quot; + Name,
            Parent_Project__r.Parent_Project__r.Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Parent_Project__r.Name + &quot; &gt; &quot; + Parent_Project__r.Name + &quot; &gt; &quot; + Name
           )
        )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Parent Projects</label>
    <type>Text</type>
</CustomField>