force-app/main/default/objects/Project__c/fields/Assignment_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_Link__c</fullName>
    <description>This field (rather than the Assignment Agreement File URL field) should be displayed on the page layout.</description>
    <formula>IF(
   ISBLANK(Assignment_Agreement_URL__c),
   &quot;&quot;,
   IF(
      OR(
         BEGINS(Assignment_Agreement_URL__c, &quot;https://&quot;),
         BEGINS(Assignment_Agreement_URL__c, &quot;http://&quot;)
        ),
      HYPERLINK(
                Assignment_Agreement_URL__c,
                &quot;Click to open the Assignment Agreement&quot;,
                &quot;_blank&quot;
               ),
      HYPERLINK(
                &quot;http://&quot; + Assignment_Agreement_URL__c,
                &quot;Click to open the Assignment Agreement&quot;,
                &quot;_blank&quot;
               )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a link to the Assignment Agreement, if one has been uploaded via the file uploader (below).</inlineHelpText>
    <label>Assignment Agreement Link</label>
    <type>Text</type>
</CustomField>