force-app/main/default/objects/Project__c/fields/Assignment_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Agreement_URL__c</fullName>
    <description>This field is applicable to Incorporated Entities, Subprojects, Series LLCs, and Unofficial Subprojects. This field should not be included on the page layout for most users, since it stores the URL of a file uploaded to the Project Control Center. (Use the Assignment Agreement Link field on page layouts instead.)</description>
    <label>Assignment Agreement File URL</label>
    <type>Url</type>
</CustomField>