force-app/main/default/objects/Project__c/fields/Auto_Join_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Join_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether or not this project is live on Auto Join.</inlineHelpText>
    <label>Auto Join Enabled</label>
    <type>Checkbox</type>
</CustomField>