force-app/main/default/objects/Project__c/fields/Auto_Join_Link__c.field-meta.xml
<CustomField>
    <fullName>Auto_Join_Link__c</fullName>
    <formula>IF(
   Auto_Join_Enabled__c,
   HYPERLINK(
              &quot;https://enrollment.lfx.linuxfoundation.org/?project=&quot; + Slug__c,
              &quot;https://enrollment.lfx.linuxfoundation.org/?project=&quot; + Slug__c,
              &quot;_blank&quot;
             ),
   &quot;This project is not on Auto Join.&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Join Link</label>
    <type>Text</type>
</CustomField>