force-app/main/default/objects/Project__c/fields/Auto_Join_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Auto_Join_Name_Override__c</fullName>
    <inlineHelpText>Leave this field blank if it&apos;s okay to show the project&apos;s Common Name as the name of the project on Auto Join. If it&apos;s not, enter what should be shown as the project name here.</inlineHelpText>
    <label>Auto Join Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>