force-app/main/default/objects/Project__c/fields/Auto_Renew_Membership__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renew Membership</label>
    <type>Checkbox</type>
</CustomField>