force-app/main/default/objects/Project__c/fields/Bill_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_Address__c</fullName>
    <label>Bill From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>