force-app/main/default/objects/Project__c/fields/Bill_From_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_City__c</fullName>
    <label>Bill From City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>