force-app/main/default/objects/Project__c/fields/Bill_From_Filename__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_Filename__c</fullName>
    <label>Bill From Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>