force-app/main/default/objects/Project__c/fields/Bill_From_Id_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_Id_Address__c</fullName>
    <formula>IF( ISBLANK( Bill_From_City__c ), Bill_From_State__c + &apos; &apos; + Bill_From_Zip__c , IF(AND(ISBLANK(Bill_From_State__c ),ISBLANK(Bill_From_Zip__c )), Bill_From_City__c , Bill_From_City__c +&apos;,&apos;+ &apos; &apos; + Bill_From_State__c + &apos; &apos; + Bill_From_Zip__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill From Id Address</label>
    <type>Text</type>
</CustomField>