force-app/main/default/objects/Project__c/fields/Bill_From_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_Phone__c</fullName>
    <label>Bill From Phone</label>
    <type>Phone</type>
</CustomField>