force-app/main/default/objects/Project__c/fields/Billfrom_ID__c.field-meta.xml
<CustomField>
    <fullName>Billfrom_ID__c</fullName>
    <externalId>true</externalId>
    <label>Billfrom ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>