force-app/main/default/objects/Project__c/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <description>Hexadecimal value representing the primary brand color for this project (e.g. #01826d). The color chosen here is set as the border of the logo portion of the LWC on the Project page.</description>
    <inlineHelpText>Hexadecimal value representing the primary brand color for this project (e.g. #01826d)</inlineHelpText>
    <label>Brand Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>