force-app/main/default/objects/Project__c/fields/Business_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Business Development Manager)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>