force-app/main/default/objects/Project__c/fields/Business_Development_Manager_U__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager_U__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Manager (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>