force-app/main/default/objects/Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Indicates the type of entity the project is established as. If you&apos;re debating between Unofficial Subproject and Subproject, note that Subproject is the more common answer.</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subproject</fullName>
            </value>
            <value>
                <fullName>Incorporated Entity</fullName>
            </value>
            <value>
                <fullName>Series LLC</fullName>
            </value>
            <value>
                <fullName>Unofficial Subproject</fullName>
            </value>
            <value>
                <fullName>Internal Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>