force-app/main/default/objects/Project__c/fields/CharterURL__c.field-meta.xml
<CustomField>
    <fullName>CharterURL__c</fullName>
    <description>This field is only applicable to Subprojects and Series LLCs. This is a URL field in the Project Control Center also (as opposed to a file upload).</description>
    <inlineHelpText>URL at which the project&apos;s Charter is publicly available. For example, this may be a link to a public PDF, a GitHub URL, or wiki URL where the Charter is publicly maintained by the project community.</inlineHelpText>
    <label>Charter URL</label>
    <type>Url</type>
</CustomField>