force-app/main/default/objects/Project__c/fields/CII_Badge_ID__c.field-meta.xml
<CustomField>
    <fullName>CII_Badge_ID__c</fullName>
    <label>CII Badge ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>