force-app/main/default/objects/Project__c/fields/CLA_Identifier__c.field-meta.xml
<CustomField>
    <fullName>CLA_Identifier__c</fullName>
    <label>CLA Identifier</label>
    <length>250</length>
    <type>Text</type>
</CustomField>