force-app/main/default/objects/Project__c/fields/CodeOfConduct__c.field-meta.xml
<CustomField>
    <fullName>CodeOfConduct__c</fullName>
    <description>URL of an uploaded Code of Conduct document</description>
    <label>CodeOfConduct</label>
    <type>Url</type>
</CustomField>