force-app/main/default/objects/Project__c/fields/Community_Manager__c.field-meta.xml
<CustomField>
    <fullName>Community_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Community Manager)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>