force-app/main/default/objects/Project__c/fields/Days_to_Deduct__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Deduct__c</fullName>
    <defaultValue>&quot;30&quot;</defaultValue>
    <description>All renewals will close 30 days as default. If your project needs to close earlier than 30 days pick a value other than 30. This change will update all open Renewal opportunity&apos;s close date, Except for Year end renewals.</description>
    <inlineHelpText>All renewals will close 30 days as default. If your project needs to close earlier than 30 days pick a value other than 30. This change will update all open Renewal opportunity&apos;s close date.</inlineHelpText>
    <label>Days to Close Renewals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>