force-app/main/default/objects/Project__c/fields/Directed_Fund__c.field-meta.xml
<CustomField>
    <fullName>Directed_Fund__c</fullName>
    <formula>/* supports hierarchies of up to 5 levels; can be added onto if needed */

AND(
    ISPICKVAL(Category__c, &quot;Subproject&quot;),
    ISPICKVAL(Funding__c, &quot;Funded&quot;),
    INCLUDES(Model__c, &quot;Membership&quot;),
    OR(
       CONTAINS(Parent_Project__r.Name, &quot;Linux Foundation&quot;),
       CONTAINS(Parent_Project__r.Parent_Project__r.Name, &quot;Linux Foundation&quot;),
       CONTAINS(Parent_Project__r.Parent_Project__r.Parent_Project__r.Name, &quot;Linux Foundation&quot;),
       CONTAINS(Parent_Project__r.Parent_Project__r.Parent_Project__r.Parent_Project__r.Name, &quot;Linux Foundation&quot;),
       CONTAINS(Parent_Project__r.Parent_Project__r.Parent_Project__r.Parent_Project__r.Parent_Project__r.Name, &quot;Linux Foundation&quot;)
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A project has a Directed Fund if it&apos;s a Subproject, it&apos;s funded, it has membership, and it&apos;s nested somewhere under the LF as the Parent Project.</inlineHelpText>
    <label>Directed Fund?</label>
    <type>Checkbox</type>
</CustomField>