force-app/main/default/objects/Project__c/fields/Disable_Automation_For_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Disable_Automation_For_Opportunity_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if automation for the owner on opportunity needs to be disabled and the current user should be the owner of the New Business Membership opportunity</inlineHelpText>
    <label>Disable Automation For Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>