force-app/main/default/objects/Project__c/fields/Dissolution_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_Document_Link__c</fullName>
    <description>This field (rather than the Dissolution Document File URL field) should be displayed on the page layout.</description>
    <formula>IF(
   ISBLANK(Dissolution_Document_URL__c),
   &quot;&quot;,
   IF(
      OR(
         BEGINS(Dissolution_Document_URL__c, &quot;https://&quot;),
         BEGINS(Dissolution_Document_URL__c, &quot;http://&quot;)
        ),
      HYPERLINK(
                Dissolution_Document_URL__c,
                &quot;Click to open the Dissolution Document&quot;,
                &quot;_blank&quot;
               ),
      HYPERLINK(
                &quot;http://&quot; + Dissolution_Document_URL__c,
                &quot;Click to open the Dissolution Document&quot;,
                &quot;_blank&quot;
               )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a link to the Dissolution Document, if one has been uploaded via the file uploader (below).</inlineHelpText>
    <label>Dissolution Document Link</label>
    <type>Text</type>
</CustomField>