force-app/main/default/objects/Project__c/fields/Dissolution_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_Document_URL__c</fullName>
    <label>Dissolution Document File URL</label>
    <type>Url</type>
</CustomField>