force-app/main/default/objects/Project__c/fields/Do_not_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, memberships will not be invoiced</inlineHelpText>
    <label>Do not Invoice</label>
    <type>Checkbox</type>
</CustomField>