force-app/main/default/objects/Project__c/fields/Docusign_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Template_Id__c</fullName>
    <label>Docusign Template Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>