force-app/main/default/objects/Project__c/fields/DontDisplayOnWebsite__c.field-meta.xml
<CustomField>
    <fullName>DontDisplayOnWebsite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this project will not be displayed on the Linux Foundation website&apos;s public list of projects.</description>
    <inlineHelpText>Check this box if this project should not be displayed on the Linux Foundation website&apos;s public list of projects.  (Note that Archived and Formation projects are hidden from the LF website whether this box is checked or not.)</inlineHelpText>
    <label>Don&apos;t Display on Website</label>
    <type>Checkbox</type>
</CustomField>