force-app/main/default/objects/Project__c/fields/Enabled_Services__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Services__c</fullName>
    <label>Enabled Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLA</fullName>
            </value>
            <value>
                <fullName>Fundspring</fullName>
            </value>
            <value>
                <fullName>Jobspring</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Domains</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Email Forwarding</fullName>
            </value>
            <value>
                <fullName>Mailing Lists</fullName>
            </value>
            <value>
                <fullName>Source Control</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Wiki</fullName>
            </value>
            <value>
                <fullName>Issue Tracking</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>Cloud Providers</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>Committees</fullName>
            </value>
            <value>
                <fullName>Mentorship</fullName>
            </value>
            <value>
                <fullName>Vulnerability Detection</fullName>
                <isActive>false</isActive>
                <label>Vulnerability Detection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>