force-app/main/default/objects/Project__c/fields/Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Executive Director is non-LF employee add contact</inlineHelpText>
    <label>Executive Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Executive Director)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>