force-app/main/default/objects/Project__c/fields/Executive_Director_U__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_U__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for updating ED contact if has salesforce user account. This is updated with a workflow. This should be used only for dashboard security.</description>
    <label>Executive Director (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>