force-app/main/default/objects/Project__c/fields/Expected_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Announcement_Date__c</fullName>
    <label>Expected Announcement Date</label>
    <type>Date</type>
</CustomField>