force-app/main/default/objects/Project__c/fields/Expected_Budget__c.field-meta.xml
<CustomField>
    <fullName>Expected_Budget__c</fullName>
    <label>Expected Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>