force-app/main/default/objects/Project__c/fields/External_Contract_Signed_Notification__c.field-meta.xml
<CustomField>
    <fullName>External_Contract_Signed_Notification__c</fullName>
    <label>External Contract Signed Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>