force-app/main/default/objects/Project__c/fields/External_Individual_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>External_Individual_Contract_Signed__c</fullName>
    <description>This Email send to JoinNowindiviual submission user when they sign the contract</description>
    <label>External Individual Contract Signed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>