force-app/main/default/objects/Project__c/fields/External_Submission_Notification__c.field-meta.xml
<CustomField>
    <fullName>External_Submission_Notification__c</fullName>
    <label>External Submission Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>