force-app/main/default/objects/Project__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <inlineHelpText>URL of the project&apos;s Facebook page.</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>