force-app/main/default/objects/Project__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <inlineHelpText>Indicates if this project has its own funding, if it does not have funding, or if it gets its funding from its Parent Project. If this project gets funding from its grandparent project, select Unfunded.</inlineHelpText>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Unfunded</fullName>
            </value>
            <value>
                <fullName>Supported by Parent Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>