force-app/main/default/objects/Project__c/fields/GitHub_ID__c.field-meta.xml
<CustomField>
    <fullName>GitHub_ID__c</fullName>
    <label>GitHub ID</label>
    <type>Url</type>
</CustomField>