force-app/main/default/objects/Project__c/fields/Google_Drive_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_URL__c</fullName>
    <inlineHelpText>Link to Google Drive Folder used to store internal documents for this project.</inlineHelpText>
    <label>Google Drive Folder URL</label>
    <type>Url</type>
</CustomField>