force-app/main/default/objects/Project__c/fields/Governance_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Governance_Document_Link__c</fullName>
    <description>This field (rather than the Governance Document File URL field) should be displayed on the page layout.</description>
    <formula>IF(
   ISBLANK(Governance_Document_URL__c),
   &quot;&quot;,
   IF(
      OR(
         BEGINS(Governance_Document_URL__c, &quot;https://&quot;),
         BEGINS(Governance_Document_URL__c, &quot;http://&quot;)
        ),
      HYPERLINK(
                Governance_Document_URL__c,
                &quot;Click to open the Governance Document&quot;,
                &quot;_blank&quot;
               ),
      HYPERLINK(
                &quot;http://&quot; + Governance_Document_URL__c,
                &quot;Click to open the Governance Document&quot;,
                &quot;_blank&quot;
               )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a link to the Governance Document, if one has been uploaded via the file uploader (below).</inlineHelpText>
    <label>Governance Document Link</label>
    <type>Text</type>
</CustomField>