force-app/main/default/objects/Project__c/fields/Governance_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Governance_Document_URL__c</fullName>
    <description>This field is only applicable to Incorporated Entities. This field should not be included on the page layout for most users, since it stores the URL of a file uploaded to the Project Control Center. (Use the Governance Document Link field on page layouts instead.)</description>
    <label>Governance Document File URL</label>
    <type>Url</type>
</CustomField>