force-app/main/default/objects/Project__c/fields/Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Color__c</fullName>
    <label>Header Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>