force-app/main/default/objects/Project__c/fields/Image_File_for_PDF__c.field-meta.xml
<CustomField>
    <fullName>Image_File_for_PDF__c</fullName>
    <label>Image File for PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>