force-app/main/default/objects/Project__c/fields/Incorporation_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Document_Link__c</fullName>
    <description>This field (rather than the Incorporation Document File URL field) should be displayed on the page layout.</description>
    <formula>IF(
   ISBLANK(Project_Entity_Formation_Document__c),
   &quot;&quot;,
   IF(
      OR(
         BEGINS(Project_Entity_Formation_Document__c, &quot;https://&quot;),
         BEGINS(Project_Entity_Formation_Document__c, &quot;http://&quot;)
        ),
      HYPERLINK(
                Project_Entity_Formation_Document__c,
                &quot;Click to open the Incorporation Document&quot;,
                &quot;_blank&quot;
               ),
      HYPERLINK(
                &quot;http://&quot; + Project_Entity_Formation_Document__c,
                &quot;Click to open the Incorporation Document&quot;,
                &quot;_blank&quot;
               )
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays a link to the Incorporation Document, if one has been uploaded via the file uploader (below).</inlineHelpText>
    <label>Incorporation Document Link</label>
    <type>Text</type>
</CustomField>