force-app/main/default/objects/Project__c/fields/Internal_Docusign_Complete_Individual__c.field-meta.xml
<CustomField>
    <fullName>Internal_Docusign_Complete_Individual__c</fullName>
    <label>Internal Docusign Complete Individual</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>