force-app/main/default/objects/Project__c/fields/Internal_Docusign_Voided_Notification__c.field-meta.xml
<CustomField>
    <fullName>Internal_Docusign_Voided_Notification__c</fullName>
    <label>Internal Docusign Voided Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>