force-app/main/default/objects/Project__c/fields/Internal_New_Individual_Opportuntiy__c.field-meta.xml
<CustomField>
    <fullName>Internal_New_Individual_Opportuntiy__c</fullName>
    <description>Email sent to opportunity owner when Joinnow Individual Submission comes in.</description>
    <label>Internal New Individual Opportuntiy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>