force-app/main/default/objects/Project__c/fields/Internal_New_Opportuntiy_Notification__c.field-meta.xml
<CustomField>
    <fullName>Internal_New_Opportuntiy_Notification__c</fullName>
    <label>Internal New Opportuntiy Notification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>